object scale changes normal map output in eevee #62839

Closed
opened 2019-03-22 12:37:40 +01:00 by MACHIN3 · 6 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-21 23:13, hash: 1ae6aaad43
Worked: 9105e1d084

Short description of error
Scaling an object changes the effect a normal map as. Applying the scale fixes it. Cycles is unaffected.
Probably related to 8b00712b55 and 27109fd209

Exact steps for others to reproduce the error

  • open attached blend
  • scale objects and compare to their unscaled counterparts
  • the change may be a bit hard to see, but it's obvious once you apply the scale

Video demo

object_scale_changes_normal_map_output_in_eevee.blend

**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-21 23:13, hash: 1ae6aaad43 Worked: 9105e1d084 **Short description of error** Scaling an object changes the effect a normal map as. Applying the scale fixes it. Cycles is unaffected. Probably related to 8b00712b55 and 27109fd209 **Exact steps for others to reproduce the error** * open attached blend * scale objects and compare to their unscaled counterparts * the change may be a bit hard to see, but it's obvious once you apply the scale [Video demo ](https://www.youtube.com/watch?v=i_lNYbv77jw) [object_scale_changes_normal_map_output_in_eevee.blend](https://archive.blender.org/developer/F6864968/object_scale_changes_normal_map_output_in_eevee.blend)
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This should be fixed already

cc1b193ddf
27109fd209
8b00712b55

This should be fixed already cc1b193ddf 27109fd209 8b00712b55
Clément Foucault was assigned by Philipp Oeser 2019-03-22 12:52:18 +01:00
Member

Sorry, my bad, can confirm actually...

Sorry, my bad, can confirm actually...

This issue was referenced by f6a6770f06

This issue was referenced by f6a6770f06ee8811493123cc8f66b0753c74a2f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62839
No description provided.