Fix T62839 object scale changes normal map output in eevee

Was using the wrong vector length.